spacing below issues

--- a/less/uwaa-drawer.less
+++ b/less/uwaa-drawer.less
@@ -300,6 +300,7 @@
 }
 .issue-row {
     height: 250px;
+    margin-bottom:40px;
 
     @media (max-width: @screen-sm-min) { 
      height: 270px;
